# MapReduceWithQueue

./: .gitignore  CMakeLists.txt  Map.cpp  Map.h  MapNoBuffer.cpp  MapNoBuffer.h  MapNoShuffle.cpp  MapNoShuffle.h  MapSync.cpp  MapSync.h  README.md  Reduce.cpp  Reduce.h  Shuffle.cpp  Shuffle.h  main.cpp
Files/: ar1.txt  ar2.txt
Files_generator/: test_generator.c
Files_test/: test_generator_MapReduce.cpp  test_generator_num_words.cpp
Semaphore/: CMakeLists.txt  Semaphore.cpp  Semaphore.h
