cmake_minimum_required(VERSION 3.5)
project(MapReduceWithQueue)

set(CMAKE_CXX_STANDARD 14)

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.65.1 COMPONENTS filesystem)

if(Boost_FOUND)
    set(CMAKE_THREAD_LIBS_INIT "-lpthread")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
    set(CMAKE_HAVE_THREADS_LIBRARY 1)
    set(CMAKE_USE_WIN32_THREADS_INIT 0)
    set(CMAKE_USE_PTHREADS_INIT 1)
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    include_directories(${Boost_INCLUDE_DIRS})
    add_subdirectory("Semaphore")
    add_executable(MapReduceWithQueue main.cpp Map.cpp Map.h Shuffle.cpp Shuffle.h ${semSources})
    target_link_libraries(MapReduceWithQueue Semaphore)
    target_link_libraries(MapReduceWithQueue ${Boost_LIBRARIES})
endif()